--- a/src/main/resources/templates/workouts.html
+++ b/src/main/resources/templates/workouts.html
@@ -58,8 +58,7 @@
 									<tbody>
 											<th:block th:each="workout : ${workouts}">
 											<tr>
-												<td th:text="${workout.name}">1</td>
-												<td th:text="${workout.notes}">1</td>
+												<td th:text="${workout}">1</td>
 											</tr>
 									</th:block>
 									</tbody>
